add form controls styles

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -3,6 +3,7 @@ $color_bg : #3a539b
 $color_t : #45494c
 $color_link : #198adf
 $color_orange : #ff7c1c
+$color_input: #788086
 
 $font : 'sferio-font', sans-serif
 
