--- a/src/templates/partials/_page-body.html
+++ b/src/templates/partials/_page-body.html
@@ -7,73 +7,117 @@
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="ports" class="s-form__label">Порты контроля переменного напряжения фаз</label>
           <select name="ports" class="s-form__select">
             <option value="1">1</option>
-            <option value="1">2</option>
-            <option value="1">3</option>
-            <option value="1">4</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
           </select>
         </div>
         <div class="s-form__group">
           <label for="delivery_results" class="s-form__label">Доставка результатов измерения</label>
-          <input type="radio" id="delivery_choise1" name="contact" value="email">
-          <label for="delivery_choise1">Email</label>
-          <input type="radio" id="delivery_choise2" name="contact" value="cloud">
-          <label for="delivery_choise2">Облачный сервис</label>
-          <input type="radio" id="delivery_choise3" name="contact" value="sms">
-          <label for="delivery_choise3">SMS</label>
+          <div class="s-form__radio-g">
+            <input type="radio" id="delivery_choise1" name="contact" value="email">
+            <label for="delivery_choise1">Email</label>
+          </div>
+          <div class="s-form__radio-g">
+            <input type="radio" id="delivery_choise2" name="contact" value="cloud">
+            <label for="delivery_choise2">Облачный сервис</label>
+          </div>
+          <div class="s-form__radio-g">
+            <input type="radio" id="delivery_choise3" name="contact" value="sms">
+            <label for="delivery_choise3">SMS</label>
+          </div>
         </div>
         <div class="s-form__group">
           <label for="additional_results" class="s-form__label">Дополнительная конфигурация<span class="s-form__tip">(необязательно)</span></label>
-          <input type="radio" id="additional_choise1" name="contact" value="email">
-          <label for="additional_choise1">Датчики влажности</label>
-          <input type="radio" id="additional_choise2" name="contact" value="cloud">
-          <label for="additional_choise2">Датчики освещенности</label>
-          <input type="radio" id="additional_choise3" name="contact" value="sms">
-          <label for="additional_choise3">Датчики давления</label>
+          <div class="s-form__radio-g">
+            <input type="radio" id="additional_choise1" name="contact" value="email">
+            <label for="additional_choise1">Датчики влажности</label>
+          </div>
+          <div class="s-form__radio-g">
+            <input type="radio" id="additional_choise2" name="contact" value="cloud">
+            <label for="additional_choise2">Датчики освещенности</label>
+          </div>
+          <div class="s-form__radio-g">
+            <input type="radio" id="additional_choise3" name="contact" value="sms">
+            <label for="additional_choise3">Датчики давления</label>
+          </div>
+        </div>
+        <div class="s-form__group">
+          <label for="delivery_results" class="s-form__label">Доставка результатов измерения</label>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="contact__email" name="contact__email" value="email">
+            <label for="contact__email">Email</label>
+          </div>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="contact__cloud" name="contact__cloud" value="cloud">
+            <label for="contact__cloud">Облачный сервис</label>
+          </div>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="contact__sms" name="contact__sms" value="sms">
+            <label for="contact__sms">SMS</label>
+          </div>
+        </div>
+        <div class="s-form__group">
+          <label for="additional_results" class="s-form__label">Дополнительная конфигурация
+            <span class="s-form__tip">(необязательно)</span>
+          </label>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="additional_choise1" name="contact__email" value="email">
+            <label for="additional_choise1">Датчики влажности</label>
+          </div>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="additional_choise2" name="contact__cloud" value="cloud">
+            <label for="additional_choise2">Датчики освещенности</label>
+          </div>
+          <div class="s-form__checkbox-g">
+            <input type="checkbox" id="additional_choise3" name="contact__sms" value="sms">
+            <label for="additional_choise3">Датчики давления</label>
+          </div>
         </div>
       </div>
       <div class="order__item">
