--- a/src/sass/_s-form.sass
+++ b/src/sass/_s-form.sass
@@ -4,3 +4,112 @@
     font-size: 16px
     line-height: 27px
     color: #788086
+  .selectize-input
+    border: none
+    box-shadow: none
+    border-radius: 0
+    border-bottom: 1px solid $color_input
+    padding-left: 0
+  .selectize-control.single .selectize-input:after
+    right: 0
+  .selectize-dropdown, .selectize-input, .selectize-input input
+    font-size: 24px
+    line-height: 27px
+    color: $color_t
+  .selectize-input.focus, &__group--active &__label
+    color: $color_bg
+  [type="checkbox"]:not(:checked),
+  [type="checkbox"]:checked 
+    position: absolute
+    left: -9999px
+  [type="checkbox"]:not(:checked) + label,
+  [type="checkbox"]:checked + label 
+    position: relative
+    padding-left: 1.95em
+    cursor: pointer
+  [type="checkbox"]:not(:checked) + label:before,
+  [type="checkbox"]:checked + label:before 
+    content: ''
+    position: absolute
+    left: 0
+    top: 0
+    width: 1.25em
+    height: 1.25em
+    border: 2px solid #ccc
+    background: #fff
+    border-radius: 4px
+    box-shadow: inset 0 1px 3px rgba(0,0,0,.1)
+  [type="checkbox"]:not(:checked) + label:after,
+  [type="checkbox"]:checked + label:after 
+    content: '✔'
+    position: absolute
+    top: .2em
+    left: .275em
+    font-size: 1.4em
+    line-height: 0.8
+    color: #09ad7e
+    transition: all .2s
+    font-family: Helvetica, Arial, sans-serif
+  [type="checkbox"]:not(:checked) + label:after 
+    opacity: 0
+    transform: scale(0)
+  [type="checkbox"]:checked + label:after 
+    opacity: 1
+    transform: scale(1)
+  [type="checkbox"]:disabled:not(:checked) + label:before,
+  [type="checkbox"]:disabled:checked + label:before 
+    box-shadow: none
+    border-color: #bbb
+    background-color: $color_input
+  [type="checkbox"]:disabled:checked + label:after 
+    color: #999
+  [type="checkbox"]:disabled + label 
+    color: #aaa
+  [type="checkbox"]:checked:focus + label:before,
+  [type="checkbox"]:not(:checked):focus + label:before 
+    border: 2px dotted blue
+  [type="radio"]:checked,
+  [type="radio"]:not(:checked) 
+      position: absolute
+      left: -9999px
+  [type="radio"]:checked + label,
+  [type="radio"]:not(:checked) + label
+      position: relative
+      padding-left: 28px
+      cursor: pointer
+      line-height: 20px
+      display: inline-block
+      color: #666
+  [type="radio"]:checked + label:before,
+  [type="radio"]:not(:checked) + label:before 
+      content: ''
+      position: absolute
+      left: 0
+      top: 0
+      width: 18px
+      height: 18px
+      border: 1px solid $color_input
+      border-radius: 100%
+      background: #fff
+  [type="radio"]:checked + label:after,
+  [type="radio"]:not(:checked) + label:after 
+      content: ''
+      width: 10px
+      height: 10px
+      background: $color_bg
+      position: absolute
+      top: 4px
+      left: 4px
+      border-radius: 100%
+      -webkit-transition: all $time ease
+      transition: all $time ease
+  [type="radio"]:not(:checked) + label:after 
+      opacity: 0
+      -webkit-transform: scale(0)
+      transform: scale(0)
+  [type="radio"]:checked + label:after 
+      opacity: 1
+      -webkit-transform: scale(1)
+      transform: scale(1)
+  &__radio-g, &__checkbox-g
+    margin: 16px 0
