--- a/src/sass/partials/_order.sass
+++ b/src/sass/partials/_order.sass
@@ -4,7 +4,9 @@
     flex-wrap: wrap
   &__heading
     flex: 0 0 100%
+    margin-bottom: 70px
   .s-form__group
     flex: 0 0 50%
     padding: 0 10%
+    margin-bottom: 70px
       
